@@ -1,3 +1,8 @@
+2008-05-10  Vlad Seryakov <seryakov@users.sf.net>
+
+	nsperm/nsperm.c: Fixed bug with netmask parsing, submitted by 
+	Daniel Stasinski, now using inet_aton instead of inet_addr
+
 2008-05-09  Vlad Seryakov <seryakov@users.sf.net>
 
 	* nsd/adprequest.c: Fixed situation when adp registered absolute path
